--- a/templates/admin.html
+++ b/templates/admin.html
@@ -9,20 +9,21 @@
 
   <form method="POST">
     {{ csrf_token() }}
-    <label>タイトル:</label>
-    <input type="text" name="form_title" value="{{ settings.form_title }}"><br>
 
-    <label>ボタンの色:</label>
-    <input type="color" name="form_button_color" value="{{ settings.form_button_color }}"><br>
+    <label for="form_title">タイトル:</label>
+    <input type="text" id="form_title" name="form_title" value="{{ settings.form_title }}"><br>
 
-    <label>名前ラベル:</label>
-    <input type="text" name="form_label_name" value="{{ settings.form_label_name }}"><br>
+    <label for="form_button_color">ボタンの色:</label>
+    <input type="color" id="form_button_color" name="form_button_color" value="{{ settings.form_button_color }}"><br>
 
-    <label>エリアラベル:</label>
-    <input type="text" name="form_label_area" value="{{ settings.form_label_area }}"><br>
+    <label for="form_label_name">名前ラベル:</label>
+    <input type="text" id="form_label_name" name="form_label_name" value="{{ settings.form_label_name }}"><br>
 
-    <label>出勤可能日ラベル:</label>
-    <input type="text" name="form_label_available" value="{{ settings.form_label_available }}"><br>
+    <label for="form_label_area">エリアラベル:</label>
+    <input type="text" id="form_label_area" name="form_label_area" value="{{ settings.form_label_area }}"><br>
+
+    <label for="form_label_available">出勤可能日ラベル:</label>
+    <input type="text" id="form_label_available" name="form_label_available" value="{{ settings.form_label_available }}"><br>
 
     <h3>アルバイトフォームのカスタム項目</h3>
     <div id="custom-fields-form">
@@ -39,20 +40,20 @@
     <br><br>
     <h2>教室登録フォーム設定</h2>
 
-    <label>タイトル:</label>
-    <input type="text" name="classroom_title" value="{{ settings.classroom_title }}"><br>
+    <label for="classroom_title">タイトル:</label>
+    <input type="text" id="classroom_title" name="classroom_title" value="{{ settings.classroom_title }}"><br>
 
-    <label>教室名ラベル：</label>
-    <input type="text" name="form_label_classroom_name" value="{{ settings.form_label_classroom_name }}"><br>
+    <label for="form_label_classroom_name">教室名ラベル：</label>
+    <input type="text" id="form_label_classroom_name" name="form_label_classroom_name" value="{{ settings.form_label_classroom_name }}"><br>
 
-    <label>場所ラベル：</label>
-    <input type="text" name="form_label_classroom_location" value="{{ settings.form_label_classroom_location }}"><br>
+    <label for="form_label_classroom_location">場所ラベル：</label>
+    <input type="text" id="form_label_classroom_location" name="form_label_classroom_location" value="{{ settings.form_label_classroom_location }}"><br>
 
-    <label>募集日時ラベル：</label>
-    <input type="text" name="form_label_classroom_date" value="{{ settings.form_label_classroom_date }}"><br>
+    <label for="form_label_classroom_date">募集日時ラベル：</label>
+    <input type="text" id="form_label_classroom_date" name="form_label_classroom_date" value="{{ settings.form_label_classroom_date }}"><br>
 
-    <label>希望する経験ラベル：</label>
-    <input type="text" name="form_label_classroom_experience" value="{{ settings.form_label_classroom_experience }}"><br>
+    <label for="form_label_classroom_experience">希望する経験ラベル：</label>
+    <input type="text" id="form_label_classroom_experience" name="form_label_classroom_experience" value="{{ settings.form_label_classroom_experience }}"><br>
 
     <h3>教室フォームのカスタム項目</h3>
     <div id="custom-fields-classroom">
@@ -73,26 +74,26 @@
 <script>
   function addFormField() {
     const container = document.getElementById("custom-fields-form");
-    const index = container.children.length;
+    const count = container.querySelectorAll("input[name^='custom_form_label_']").length;
     const div = document.createElement("div");
     div.innerHTML = `
-      <input type="text" name="custom_form_label_${index + 1}" placeholder="ラベル">
-      <input type="text" name="custom_form_name_${index + 1}" placeholder="name属性">
+      <input type="text" name="custom_form_label_${count + 1}" placeholder="ラベル">
+      <input type="text" name="custom_form_name_${count + 1}" placeholder="name属性">
     `;
     container.appendChild(div);
-    document.getElementById("custom_form_count").value = index + 1;
+    document.getElementById("custom_form_count").value = count + 1;
   }
 
   function addClassroomField() {
     const container = document.getElementById("custom-fields-classroom");
-    const index = container.children.length;
+    const count = container.querySelectorAll("input[name^='custom_classroom_label_']").length;
     const div = document.createElement("div");
     div.innerHTML = `
-      <input type="text" name="custom_classroom_label_${index + 1}" placeholder="ラベル">
-      <input type="text" name="custom_classroom_name_${index + 1}" placeholder="name属性">
+      <input type="text" name="custom_classroom_label_${count + 1}" placeholder="ラベル">
+      <input type="text" name="custom_classroom_name_${count + 1}" placeholder="name属性">
     `;
     container.appendChild(div);
-    document.getElementById("custom_classroom_count").value = index + 1;
+    document.getElementById("custom_classroom_count").value = count + 1;
   }
 </script>
 
