--- a/templates/view_classrooms.html
+++ b/templates/view_classrooms.html
@@ -147,7 +147,7 @@
   {% for row_index, row in rows %}
   <tr>
     {% for col_index, cell in row %}
-      {% if col_index == 0 %}
+      {% if loop.index0 == 0 %} <!-- col_index を loop.index0 に変更 -->
         <td class="clickable" onclick="showPopup('{{ cell }}', '詳細情報をここに追加')">{{ cell }}</td>
       {% else %}
         <td>{{ cell }}</td>
