--- a/templates/view_classrooms.html
+++ b/templates/view_classrooms.html
@@ -146,10 +146,11 @@
 <tbody>
   {% for row_index, row in rows %}
   <tr>
-    {% for cell in row %}
-      {% if loop.index0 == 0 %}
-        <td class="clickable" onclick="showPopup('{{ cell }}', '詳細情報をここに追加')">{{ cell }}</td>
-      {% else %}
+    {% for col_index, cell in row %}
+      {% if col_index == 0 %}
+        <!-- 教室名をクリックするとポップアップ表示 -->
+        <td class="clickable" onclick="showPopup('{{ cell }}', '{{ row[5] }}')">{{ cell }}</td>
+      {% elif col_index != 6 %} <!-- liff_id を非表示 -->
         <td>{{ cell }}</td>
       {% endif %}
     {% endfor %}
