--- a/templates/view_classrooms.html
+++ b/templates/view_classrooms.html
@@ -147,7 +147,7 @@
   {% for row_index, row in rows %}
   <tr>
     {% for col_index, cell in row %}
-      {% if col_index == 0 %}
+      {% if loop.index0 == 0 %}
         <!-- 教室名をクリックするとポップアップ表示 -->
         <td class="clickable" onclick="showPopup('{{ cell }}', '{{ row[5] }}')">{{ cell }}</td>
       {% elif col_index != 6 %} <!-- liff_id を非表示 -->
