--- a/templates/view_classrooms.html
+++ b/templates/view_classrooms.html
@@ -144,23 +144,22 @@
       </tr>
     </thead>
     <tbody>
-      {% for row_index, in rows %}
-      <tr>
-        {% for col_index, cell in %}
-        {% if col_index == 0 %}
-        <!-- 教室名をクリックするとポップアップ表示 -->
-        <td class="clickable" onclick="showPopup('{{ cell }}', '{{ row_data[5] }}')">{{ cell }}</td>
-        {% elif col_index != 6 %} <!-- liff_id を完全に非表示 -->
+  {% for row_index, row in rows %}
+  <tr>
+    {% for col_index, cell in row %}
+      {% if col_index == 0 %}
+        <td class="clickable" onclick="showPopup('{{ cell }}', '詳細情報をここに追加')">{{ cell }}</td>
+      {% else %}
         <td>{{ cell }}</td>
-        {% endif %}
-        {% endfor %}
-        <td>
-          <button onclick="submitInterest('{{ row_index }}')">興味あり</button>
-        </td>
-      </tr>
-      {% endfor %}
-      </tbody>
-</table>
+      {% endif %}
+    {% endfor %}
+    <td>
+      <button onclick="submitInterest('{{ row_index | int }}')">興味あり</button>
+    </td>
+  </tr>
+  {% endfor %}
+</tbody>
+  </table>
 
   <div id="popup-overlay" class="popup-overlay" onclick="closePopup()"></div>
   <div id="popup" class="popup">
