--- a/templates/view_classrooms.html
+++ b/templates/view_classrooms.html
@@ -144,20 +144,14 @@
       </tr>
     </thead>
     <tbody>
-  {% for row_index, row in rows %}
-  <tr>
-    {% for col_index, cell in row %}
-      {% if col_index == 0 %}
-        <td class="clickable" onclick="showPopup('{{ cell }}', '詳細情報をここに追加')">{{ cell }}</td>
-      {% else %}
-        <td>{{ cell }}</td>
-      {% endif %}
-    {% endfor %}
-    <td>
-      <button onclick="submitInterest('{{ row_index | int }}')">興味あり</button>
-    </td>
-  </tr>
-  {% endfor %}
+      {% for row_index, row in rows %}
+      <tr>
+        <td>{{ row }}</td> <!-- 必要に応じて表示内容を変更 -->
+        <td>
+          <button onclick="submitInterest('{{ row_index | int }}')">興味あり</button>
+        </td>
+      </tr>
+      {% endfor %}
 </tbody>
   </table>
 
