--- a/templates/view_classrooms.html
+++ b/templates/view_classrooms.html
@@ -144,15 +144,17 @@
       </tr>
     </thead>
     <tbody>
-      {% for row_index, row in rows %}
+      {% for row_index, row_data in rows %}
       <tr>
-        <td>{{ row }}</td> <!-- 必要に応じて表示内容を変更 -->
+        {% for cell in row_data %}
+        <td>{{ cell }}</td>
+        {% endfor %}
         <td>
           <button onclick="submitInterest('{{ row_index | int }}')">興味あり</button>
         </td>
       </tr>
       {% endfor %}
-</tbody>
+      </tbody>
   </table>
 
   <div id="popup-overlay" class="popup-overlay" onclick="closePopup()"></div>
